# neuromorphic-citation-network

./: .gitignore
dataset-assembly/: README.md
dataset-assembly/scripts/: build_unified_network.py  create_json_template.py  docling_fetch.py  ds_ocr_fetch.py  ocr_fetch.py  reindex_network.py  (+3 more)
dayan_abbot_manual_data/: raw_references.csv  references_with_doi.csv
kg-extraction/: extract_kg.py  extract_kg_aiml.sh  extract_kg_neuromorphic.sh  extract_kg_neuroscience.sh  json_to_txt.py
kg-extraction/kg-builder/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
kg-extraction/kg-builder/configs/: base.yaml  llm.yaml  mongo.yaml
kg-extraction/kg-builder/configs_aiml/: base.yaml  compare.yaml  pipeline.yaml
kg-extraction/kg-builder/configs_all/: base.yaml
kg-extraction/kg-builder/configs_neuromorphic/: base.yaml  llm.yaml  postmerging.yaml
kg-extraction/kg-builder/configs_neuroscience/: base.yaml  pipeline.yaml
kg-extraction/kg-builder/src/kg_builder/: __init__.py  cli.py  clustering.py  config.py  consistency.py  dedupe.py  extraction.py  graphrag.py  io_utils.py  llm_client.py  logging_utils.py  merge.py  mongo_utils.py  ontology.py  postmerging.py  schemas.py
kg-extraction/kg-builder/src/kg_builder/prompts/: aiml_prompt.md  entity_extraction.md  graphrag_query.md  neuromorphic_prompt.md  neuroscience_prompt.md  triple_extraction.md
kg-extraction/kg-builder/src/kg_builder/utils/: compare_llms.py  kg_visualization.py  log_timing_analysis.py
kg-extraction/kg-builder/tests/: README.md  test_ollama.py  test_schemas.py  test_utils.py
(+58 files in other folders)
