[tool.poetry]
name = "kg-builder"
version = "0.1.0"
description = "Knowledge Graph Builder from Publications using LLM with Graph Visualization"
authors = ["Research Team <research@example.com>"]
keywords = ["knowledge-graph", "llm", "mongodb", "nlp", "ontology", "visualization"]
homepage = "https://github.com/example/kg-builder"
repository = "https://github.com/example/kg-builder"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pyyaml = "^6.0"
tqdm = "^4.0"
pandas = "^2.0"
numpy = "^1.0"
pymongo = "^4.0"
openai = "^1.0"
networkx = "^3.0"
python-louvain = "^0.16"  # For Louvain community detection
owlready2 = "^0.45"
rapidfuzz = "^3.0"
pyarrow = "^15.0"
matplotlib = "^3.0"
requests = "^2.0"
typer = "^0.9"
faiss-cpu = "^1.7"  # For vector search and indexing
aiohttp = "^3.9"    # For async HTTP requests
transformers = "^4.30"
sentence-transformers = "^2.2"
scikit-learn = "^1.3"
rich = "^13.0"
tiktoken = "^0.5"
torch = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1"
black = "^23.0"
mypy = "^1.0"
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
